# RAG-

./: README.md  graph.md  md5.text  pyproject.toml  rag_eval_results.csv
RAG+langchain/: analyze_traces.py  (+13 more)
test/: 01.py  02openai_basic.py  03stream.py  04history.py  06json.py  pyproject.toml
test/vibecoding/: llm_analyzer.py
test/vibecoding/job-application-agent/: main.py  requirements.txt
test/vibecoding/job-application-agent/data/processed_jobs/: jobs.db
test/vibecoding/job-application-agent/data/resume/: my_resume.md
test/vibecoding/job-application-agent/src/analysis/: llm_analyzer.py
test/vibecoding/job-application-agent/src/processing/: parser.py
test/vibecoding/job-application-agent/src/storage/: database.py
test/vibecoding/spider/: bosszp_spider.py  bosszp_test_spider.py  mysql.py
test/vibecoding/spider/.chrome_profile/: Breadcrumbs  Local State
test/vibecoding/spider/.chrome_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
test/vibecoding/spider/.chrome_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  index
test/vibecoding/spider/.chrome_profile/GraphiteDawnCache/: data_1  index
test/vibecoding/spider/.chrome_profile/ShaderCache/: data_1  index
test/vibecoding/spider/.chrome_profile/component_crx_cache/: metadata.json
(+194 files in other folders)
