[project]
name = "intern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "chromadb>=1.5.2",
    "dashscope>=1.25.13",
    "flask>=3.1.3",
    "jq>=1.11.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-dashscope>=0.1.8",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pymysql~=1.1.1",
    "selenium~=4.21.0",
    "streamlit>=1.55.0",
    "tenacity>=9.1.4",
]
